--- a/test/index.html
+++ b/test/index.html
@@ -9,7 +9,7 @@
   <div id="app">
 
   </div>
-  <script src="../dist/index.js" defer></script>
+  <script src="dist/index.js" defer></script>
 </body>
 
 </html>
