--- a/test/index.html
+++ b/test/index.html
@@ -3,6 +3,14 @@
 <head>
   <meta charset=utf8>
 <!--  <link rel=stylesheet href="https://prosemirror.net/css/editor.css">-->
+
+  <style>
+    #app {
+        display: flex;
+        width: 100%;
+        height: 100%;
+    }
+  </style>
 </head>
 
 <body>
